--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -620,17 +620,15 @@ The assumption of perfectly divisible assets might also have an effect on cost i
 
 ```{r Finding from 1 and 3, echo=FALSE}
 
-# #Define function to calculate the sharpe ratio
-# Sharpe_ratio = function(x){
-#   mu <- mean(x)
-#   sigma <- sqrt(1 / (length(x) - 1) * sum((x-mu)^2) )
-#   return(mu/sigma)
-# }
-
-#Define function to calculate the sharpe ratio
-Sharpe_ratio = function(x){
-  mu <- mean(12 * x)
-  sd <- sqrt(12) * sd(x)
+# Define function to calculate the sharpe ratio
+Sharpe_ratio = function(x, annualized = False){
+  if(annualized){
+    multiplier <- 12
+  } else{
+    multiplier <- 1
+  }
+  mu <- mean(x * multiplier)
+  sd <- sd(x) * sqrt(multiplier)
   return(mu/sd)
 }
 
@@ -640,7 +638,7 @@ summary3 <- matrix(NA, ncol = 3, nrow = 2)
 rownames(summary3) <- c("Standard long-short portfolio","Our long-short portfolio")
 
 # Add the data
-summary3[,1] <- c(Sharpe_ratio(long_short_portfolio$long_short), Sharpe_ratio(our_mom_long_short_portfolio$long_short))
+summary3[,1] <- c(Sharpe_ratio(long_short_portfolio$long_short, annualized = False), Sharpe_ratio(our_mom_long_short_portfolio$long_short, annualized = False))
 summary3[,2] <- c(mean(long_short_portfolio$long_short), mean(our_mom_long_short_portfolio$long_short))
 summary3[,3] <- c(turnover_mom, our_mom_turnover)
 
@@ -969,40 +967,40 @@ w_pp_table %>%
 
 ## Problem 3
 
-```{r}
-compute_efficient_weight <- function(Sigma,
-                                     mu,
-                                     gamma = gamma_default, 
-                                     beta = 0, # transaction costs
-                                     w_prev = 1/ncol(Sigma) * rep(1, ncol(Sigma))){ 
-  
-  iota <- rep(1, ncol(Sigma))
-  Sigma_processed <- Sigma + beta / gamma * diag(ncol(Sigma))
-  mu_processed <- mu + beta * w_prev
-  
-  Sigma_inverse <- solve(Sigma_processed)
-  
-  w_mvp <- Sigma_inverse %*% iota
-  w_mvp <- as.vector(w_mvp / sum(w_mvp))
-  w_opt <- w_mvp  + 1/gamma * (Sigma_inverse - 1 / sum(Sigma_inverse) * Sigma_inverse %*% iota %*% t(iota) %*% Sigma_inverse) %*% mu_processed
-  return(as.vector(w_opt))
-}
-
-returns_matrix <- Sub_US_Stocks %>% select(permno, month, ret_excess) %>%
-  pivot_wider(
-    names_from = permno,
-    values_from = ret_excess
-  ) %>% select(-month)
-
-
-
-sigmatilde <- cov(returns_matrix)
-mutilde <- colMeans(returns_matrix)
-
-naive <- 1/ncol(sigmatilde) * rep(1, ncol(sigmatilde))
-
-efficient <- compute_efficient_weight(sigmatilde, mutilde, w_prev = naive, beta = 0)
-```
-
+# ```{r}
+# compute_efficient_weight <- function(Sigma,
+#                                      mu,
+#                                      gamma = gamma_default, 
+#                                      beta = 0, # transaction costs
+#                                      w_prev = 1/ncol(Sigma) * rep(1, ncol(Sigma))){ 
+#   
+#   iota <- rep(1, ncol(Sigma))
+#   Sigma_processed <- Sigma + beta / gamma * diag(ncol(Sigma))
+#   mu_processed <- mu + beta * w_prev
+#   
+#   Sigma_inverse <- solve(Sigma_processed)
+#   
+#   w_mvp <- Sigma_inverse %*% iota
+#   w_mvp <- as.vector(w_mvp / sum(w_mvp))
+#   w_opt <- w_mvp  + 1/gamma * (Sigma_inverse - 1 / sum(Sigma_inverse) * Sigma_inverse %*% iota %*% t(iota) %*% Sigma_inverse) %*% mu_processed
+#   return(as.vector(w_opt))
+# }
+# 
+# returns_matrix <- Sub_US_Stocks %>% select(permno, month, ret_excess) %>%
+#   pivot_wider(
+#     names_from = permno,
+#     values_from = ret_excess
+#   ) %>% select(-month)
+# 
+# 
+# 
+# sigmatilde <- cov(returns_matrix)
+# mutilde <- colMeans(returns_matrix)
+# 
+# naive <- 1/ncol(sigmatilde) * rep(1, ncol(sigmatilde))
+# 
+# efficient <- compute_efficient_weight(sigmatilde, mutilde, w_prev = naive, beta = 0)
+# ```
+# 
 
 
