--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -644,7 +644,7 @@ rownames(summary3) <- c("Standard long-short portfolio","Our long-short portfoli
 
 # Add the data
 summary3[,1] <- c(Sharpe_ratio(long_short_portfolio$long_short, annualized = False), Sharpe_ratio(our_mom_long_short_portfolio$long_short, annualized = False))
-summary3[,2] <- c(mean(long_short_portfolio$long_short), mean(our_mom_long_short_portfolio$long_short))
+  summary3[,2] <- c(mean(long_short_portfolio$long_short), mean(our_mom_long_short_portfolio$long_short))
 summary3[,3] <- c(turnover_mom, our_mom_turnover)
 
 # Prints the table
@@ -659,7 +659,7 @@ summary3 %>%
 
 ```
 
-
+We see that our suggested strategy has a better sharpe ratio, so a better return proportional to the amount of risk taken.The positive excess return 0.0047 compared to 0.0075 suggests that we are able to catch a good part of the momentum premium but with a turnover that is about 25% smaller while also taking on less risk. We therefore conclude that the strategy works decently for the assigned purpose.
 
 # Exam part 2
 In part 2 of this report we will use a dataset which consists of 252 monthly observations for $N=8$ different US-listed stocks identified by their permno which is a unique company identifier. The permno for the stocks used are: 10026, 10032, 10044, 10104, 10200, 10232, 10252 and 10397. The whole dataset includes monthly observations from "2000-01-01" to "2020-12-01". The first two problems will focus on the data up until (and including) 2015, where problem 3 will then use the last 5 years in order to test the **MISSING** estimated in problem 1 and 2. For each month-permno observation, the dataset contains the following variables: ret_excess is the net excess return for each month. mkt_excess, smb and hml are the market excess returns, the returns of the small-minus-big portfolio and the high-minus-low book-to-market ratio portfolio returns from Kenneth French’s homepage. beta is the estimated CAPM beta of the stock, measured at the beginning of month t, size is a measure of market capitalization of the stock at the beginning of month t and bm is the book-to-market ratio of the stock, measured at the beginning of month t. The columns beta, size and bm are standardized such that the monthly cross-sectional average is zero and the monthly cross-sectional standard deviation is one.
