--- a/AEF_Final_Exam_2022.Rmd
+++ b/AEF_Final_Exam_2022.Rmd
@@ -809,7 +809,7 @@ portfolio_weights %>%
 
 ## Problem 2
 
-The parameter vector $\theta$ is a vector coefficient that we estimate. Here we don’t estimate one weight for each stock, for the different points in time, we would rather estimate weights as a single function for the chosen characteristics that will apply to all stocks over time, and this is called a portfolio policy.
+The parameter vector $\theta$ is a vector coefficient that we estimate. Here we do not estimate one weight for each stock for the different points in time, and we would instead estimate weights as a single function for the chosen characteristics that will apply to all stocks over time, which is called a portfolio policy.
 
 We parameterize the optimal portfolio weights as a function the characteristics for the stock's, with the simple linear specifications for the weights:
 
@@ -819,11 +819,11 @@ To estimate $\theta$ we maximize the linear policy case  function:
 $$\max\limits_{\theta} \frac{1}{N}\displaystyle\sum_{i=0}^{T-1} \bigg(\displaystyle\sum_{i=1}^{N_t}\bigg (\bar\omega_{i,t}+\frac{1}{N_t}\theta^{\intercal}\hat x_{i,t} \bigg) r_{i,t+1} \bigg)$$
 
 The most important aspect of the coefficient $\theta$ is that the parameterization is constant across assets through time. If we have a constant coefficient across assets, then the weight in the portfolio for each stock will depend on the characteristics of the stock and not on the history of the return on the stock. 
-And based on this, if we have two stocks that are close to each other in characteristics, which are related to the expected return and risk, with different sample returns, should even then have the same weight in the portfolio.
+Furthermore, based on this, if we have two stocks that are close to each other in characteristics related to the expected return and risk, with different sample returns, they should even have the same weight in the portfolio.
 
-It is relatively easy to optimizing a portfolio composed of a large number of stocks. But the burden of this type of optimization does not come from the number of assets, but more from the number of characteristics. Also only optimize the entire portfolio based on the parameters we choose, which will parsimony also reduce the risk of in-sample and overfitting. This is because the coefficients will only deviate from zero if there is a combination of risk and return across assets consistently. This will also affect the optimization in the aspect that it tends not to take extreme values.   
+It is relatively easy to optimize a portfolio composed of many stocks. However, the burden of this type of optimization does not come from the number of assets but more from the number of characteristics. Also, only optimize the entire portfolio based on the parameters we choose, which will reduce the risk of in-sample and overfitting. This is because the coefficients will only deviate from zero if there is consistently a combination of risk and return across assets. This will also affect the optimization because it tends not to take extreme values.   
 
-To estimate $\hat{\theta}$ we program a series of functions to determine the parametric portfolio given $x_{i,t}$ and $\theta$. We then implement a function to determine the gross return og said portfolio, calculate its certainty equivalent and use the *optim* function in R to do numerical optimization of the certainty equivalent by adjusting $\hat{\theta}$.
+To estimate $\hat{\theta}$ we program a series of functions to determine the parametric portfolio given $x_{i,t}$ and $\theta$. We then implement a function to determine the portfolio's gross return, calculate its certainty equivalent and use the *optim* function in R to do numerical optimization of the certainty equivalent by adjusting $\hat{\theta}$.
 
 
 ```{r, echo=FALSE}
@@ -987,15 +987,21 @@ strategies_returns[2,] <- c(Sharpe_ratio(excess_return * portfolio_weights, annu
 strategies_returns %>%
   knitr::kable(booktabs = T,
                digits = 4,
-               col.names = c("Fama French", "Parametric", "Efficient", "naive"),
+               col.names = c("Fama French", "Parametric", "Efficient", "Naive"),
                caption = "Sharpe ratio") %>%
   kable_paper("hover", full_width = F) %>%
   kable_styling(latex_options = "HOLD_position")
  
 ```
 
-With back-testing strategies, a problem with the estimation can come when we use a very complex model on a dataset that is too small. As our estimation will try to fit more of the data, this can lead to overfitting. 
-The pp strategi in a high-dimensional asset universe will be affected if it needs more characteristics as parameters, as that will make it heavier to optimize. But if you only use very few characteristics it will be easier to optimize. The Naïve portfolio will with a certain number of assets eliminate the diversifiable risk, but still, leave the systematic risk. Having a small amount of capital available for each asset, in general, will minimize the loss and return you get, due to the size of the amount. An efficient portfolio will in this kind of universe have can have problems if there are too many of the same kind of assets. Because it looks at the covariance between two assets, and if prices move in different directions, it will give a lower covariance between assets, and this will gives us a lower risk. 
-When we look at transaction cost, we would in a high-dimensional asset universe have to look at it in combination with turnover. For if we have a high amount of assets, but the strategi perform with a turnover that is too low, compared to the transaction cost. 
+The different strategies show us that Fama French has the highest total return, but its sharp ratio is only the second highest Sharp Ratio. The highest sharp ratio comes from the Naïve portfolio, which has the second highest total return. This shows us that the best portfolio is the Naïve portfolio compared to the risk we have taken. 
+
+With back-testing strategies, a problem with the estimation can come when we use a very complex model on a dataset that is too small. As our estimation will try to fit more of the data, this can lead to overfitting. A shortfall for this implementation is that we create a portfolio that should hold for 5 years, without rebalancing. Which is a hard task, as we try to predict that far in the future based on the historical data.
+
+The Parametric portfolio strategi in a high-dimensional asset universe will be affected if it needs more characteristics as parameters, as that will make it heavier to optimize. So we expected it to perform better if we add more characteristics, but it will also make the calculation heavier and therefore take more time. The Naïve portfolio will with a certain number of assets eliminate the diversifiable risk, but still, leave the systematic risk. An efficient portfolio will in this kind of universe have can have problems if the time horizen is to small, as it need a long time horizon to calculate the covariance matrix. Farma French will perform well if it is given a time horizon that is long enough, as the investor has to ride out underperformance and volatility that could occur in a short term.  
+
+From the chosen portfolio weights we have aqquired from all 4 methods our assesment is that the efficient will have the largest turnover and therefore the largest transaction costs. Fama French and parametric will have about the same turnover and the naive portfolio will have by far the lowest turnover as it only has to be adjusted marginally to compensat for returns.
+
+
 
 
